added some styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
 <div class="content">
     <h1>Task Master</h1>
 
+    <form action="/" method="POST">
+        <input type="text" name="content" id="content">
+        <input type="submit" value="Add Task">
+    </form>
     {% if tasks|length < 1%}
     <h4>No Tasks</h4>
     {% else %}
@@ -18,8 +22,8 @@
             <th>Actions</th>
         </tr>
         {% for task in tasks %}
-            <tr>
-                <td>{{ task.content }}</td>
+            <tr id="task">
+                <td id="task-content">{{ task.content }}</td>
                 <td>{{ task.date_created.date() }}</td>
                 <td>
                     <a href="/delete/{{task.id}}">Delete</a>
@@ -30,9 +34,5 @@
         {% endfor %}
     </table>
     {% endif %}
-    <form action="/" method="POST">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
-    </form>
 </div>
 {% endblock %}
