--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,18 +1,34 @@
+*{
+    box-sizing: border-box;
+}
+
 html,
 body{
     text-align: center;
     margin: 0;
+    padding: 0;
     font-family: sans-serif;
 }
 
 table, tr, td, th{
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
     border: 1px solid black;
     border-collapse: collapse;
 }
 
+#task:hover{
+    background: brown;
+    cursor: pointer;
+}
+
+#task-content{
+    width: 60%;
+}
+
 form{
-    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
 }
